Part 1 of the fix - 342978: Refactor Tree widget to make it really virtual https://bugs.eclipse.org/bugs/show_bug.cgi?id=342978